<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_kelola_lokasi"
    android:background="@color/grey_light"
    tools:context="com.mlijo.aryaym.penjual_mlijo.Pengaturan.KelolaLokasiActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_radius"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Area Berjualan"
            android:textSize="15sp"
            android:textColor="@color/Color_Black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@android:color/darker_gray" />
        <TextView
            android:id="@+id/txt_kecamatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:hint="Pilih area Kecamatan anda berjualan"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Hari Berjualan"
            android:textSize="15sp"
            android:textColor="@color/Color_Black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@android:color/darker_gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:id="@+id/txt_hari_mulai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/hint_hari_mulai"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/txt_hari_selesai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/hint_hari_selesai"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="Jam Berjualan"
            android:textSize="15sp"
            android:textColor="@color/Color_Black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@android:color/darker_gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:weightSum="5">
            <TextView
                android:id="@+id/txt_jam_mulai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/hint_jam_mulai"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/txt_jam_selesai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:hint="@string/hint_jam_selesai"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_radius"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="Pengaturan berbagi lokasi"
            android:textSize="15sp"
            android:textColor="@color/Color_Black"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="@android:color/darker_gray" />
        <Switch
            android:id="@+id/switch_lokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Status :"/>
            <TextView
                android:id="@+id/txt_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit_lokasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/input_layout"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="Perbarui Status"
        android:textColor="@color/white"/>

</RelativeLayout>
