<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mlijo.aryaym.penjual_mlijo.KelolaPenjualan.KelolaPenjualanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@color/md_light_green_A700"
            android:gravity="center"
            android:text="Ringkasan Notifikasi Penjualan"
            android:textSize="20sp"
            android:textStyle="bold"/>


        <LinearLayout
            android:id="@+id/pesanan_baru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:weightSum="2"
            android:clickable="true">

            <TextView
                android:id="@+id/jml_penjualan_baru"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="0"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:background="@drawable/white_circle_drawable"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:gravity="center_vertical"
                android:text="@string/lbl_pesanan_baru"
                android:textStyle="bold"
                android:textSize="15sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
        android:id="@+id/status_penjualan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:weightSum="2"
        android:clickable="true">

        <TextView
                android:id="@+id/jml_status_penjualan"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="0"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:background="@drawable/white_circle_drawable"
                android:textSize="20sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:gravity="center_vertical"
            android:text="@string/lbl_status_penjualan"
            android:textStyle="bold"
            android:textSize="15sp"/>

    </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:id="@+id/riwayat_transaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:weightSum="2"
            android:clickable="true">

            <TextView
                android:id="@+id/jml_riwayat_transaksi"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="0"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:background="@drawable/white_circle_drawable"
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:gravity="center_vertical"
                android:text="@string/lbl_riwayat_transaksi"
                android:textStyle="bold"
                android:textSize="15sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

</FrameLayout>
